# ignition_tools

./: .cursorrules  .env.sample  .env.working  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_STATUS.md  CLI_TEST_RESULTS.md  Dockerfile  ENVIRONMENT_VARIABLES_SECURITY_COMPLETED.md  HARDCODED_METRICS_INVESTIGATION_SUMMARY.md  IMPORT_RESOLUTION_STATUS.md  LARGE_FILE_SPLITTING_PLAN.md  LICENSE  MCP_COMPLETE_CONFIGURATION_SUMMARY.md  MCP_SERVER_STATUS.md  NEO4J_MCP_FIX_SUMMARY.md  PHASE_11_1_COMPLETION_SUMMARY.md  PHASE_12_5_COMPLETION_SUMMARY.md  PHASE_12_6_COMPLETION_SUMMARY.md  PHASE_9_7_ENVIRONMENT_SETUP_COMPLETION_SUMMARY.md  README.md  README_UPDATE_PLAN.md  SCRIPT_GENERATION_PROGRESS_SUMMARY.md  TASK_14_OPC_UA_OUTLINE.md  TASK_6_SPLITTING_SUMMARY.md  TERMINAL_STALL_MONITORING_COMPLETION_SUMMARY.md  TESTING_PROTOCOL.md  TESTING_SUMMARY.md  TYPE_HINT_MODERNIZATION_PLAN.md  add_goals_summary.py  cli_readme.md  comprehensive_type_fix_report.md  demo_phase_12_8_deployment_packages.py  demo_terminal_stall_system.py  dependency_graph.mermaid  docker-compose.staging.yml  docker-compose.yml  final_type_annotation_report.md  fix_union_syntax_comprehensive.py  (+28 more)
config/: env.example  testing.env.example
docs/: AGENT_KNOWLEDGE_SYSTEM.md  AUTOMATED_CODE_OPTIMIZATION_SUMMARY.md  AUTOMATED_REFACTORING_COMPLETION_SUMMARY.md  AUTOMATED_REFACTORING_EXECUTION_SUMMARY.md  CODE_INTELLIGENCE_PHASE_8_1_SUMMARY.md  CURSOR_AGENT_SETUP.md  DATA_INTEGRATION_GUIDE.md  DEPLOYMENT_PATTERN_LEARNING_COMPLETION.md  DEPLOYMENT_PATTERN_SYSTEM.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  GATEWAY_INTEGRATION_SUMMARY.md  GIT_AUTOMATION_ENHANCED_GUIDE.md  IGNITION_RELATIONSHIP_GRAPH.md  LEARNING_SYSTEM_INTEGRATION_SUMMARY.md  MCP_AGENT_KNOWLEDGE_BASE.md  Model Based Tuning.txt  NEO4J_BACKUP_PLAN.md  PHASE_11_1_SME_AGENT_HUMAN_EVALUATION_ENHANCEMENT.md  PHASE_12_1_COMPLETION_SUMMARY.md  PHASE_12_2_COMPLETION_SUMMARY.md  PHASE_12_3_COMPLETION_SUMMARY.md  PHASE_13_2_COMPLETION_SUMMARY.md  PHASE_13_3_ADAPTIVE_LEARNING_COMPLETION_SUMMARY.md  PHASE_16_2_SPECIALIZED_EXPERTISE_MODULES.md  PHASE_16_COMPLETION_SUMMARY.md  PHASE_16_ENTERPRISE_AI_PLATFORM.md  PHASE_17_1_ADVANCED_LLM_INTEGRATION.md  PHASE_8_1_COMPLETION_SUMMARY.md  PHASE_8_2_COMPLETION_SUMMARY.md  PHASE_8_2_VECTOR_EMBEDDINGS_SETUP.md  PHASE_8_3_AI_ASSISTANT_ENHANCEMENT_COMPLETION_SUMMARY.md  PHASE_8_5_WORKFLOW_INTEGRATION_COMPLETION_SUMMARY.md  PHASE_9_1_MODULE_SDK_COMPLETION_SUMMARY.md  PHASE_9_2_CORE_MODULE_INFRASTRUCTURE_COMPLETION_SUMMARY.md  PHASE_9_5_AI_ASSISTANT_STRATEGIC_PLAN.md  PHASE_9_6_FIX_PLAN.md  PHASE_9_7_MODULE_DEPLOYMENT_DISTRIBUTION_COMPLETION_SUMMARY.md  README.md  SUPABASE_CONNECTION_GUIDE.md  (+26 more)
examples/: __init__.py  new_agent_initialization.py
graph-data/: README.md
mcp/: Dockerfile  README.md  __init__.py  mkdocs.yml  pytest.ini  requirements.txt
mcp-tools/: __init__.py  mkdocs.yml  pytest.ini  requirements.txt
reports/: codebase_analysis_report.md  codebase_summary_report.md
scripts/: README.md  README_codebase_analyzer.md  __init__.py  add_desktop_commander_config.py  add_github_official_config.py  add_memory_and_curl_configs.py  add_neo4j_docker_configs.py  add_nodejs_sandbox_config.py  analyze_pydantic_ai.py  codebase_analyzer.py  comprehensive_mcp_test.py  context_processor.py  demo_deployment_patterns.py  demo_learning_integration.py  demo_repository_analysis.py  demo_uvicorn_testing.py  deploy.sh  fix_curl_config.py  fix_neo4j_env_permanently.py  fix_neo4j_mcp_connectivity.py  fix_type_annotations.py  frontend_file_migration.py  frontend_recovery.py  full_restore_backup.py  generate_certificates.py  import_codebase_to_neo4j.py  mcp_config_manager.py  monitor_logs.py  nodejs_migration.py  populate_task_11.py  populate_task_12.py  populate_task_13.py  populate_task_14.py  repository_separation.py  rotate_tokens.sh  run_opcua_ui.py  run_tests.py  run_ui.py  (+27 more)
(+545 files in other folders)
